--- a/Enter.Dashboard/Pages/Counter.razor
+++ b/Enter.Dashboard/Pages/Counter.razor
@@ -22,6 +22,6 @@
         currentCount++;
 
         if (currentCount == 3 && ModalItem != null)
-           await ModalItem.CloseAsync();
+           await ModalItem.CancelAsync();
     }
 }
