--- a/Enter.UI/wwwroot/scss/_variables.scss
+++ b/Enter.UI/wwwroot/scss/_variables.scss
@@ -1,8 +1,9 @@
 $breakpoints: (
-  mobile: 600px,
+  mobile: 480px,
   tablet: 768px,
-  desktop: 992px,
-  screen: 1200px,
+  laptop: 1024px,
+  desktop: 1280px,
+  screen: 1536px,
 );
 
 $colors: (
