--- a/Enter.UI/Components/Tabs/EntMdiTab.razor
+++ b/Enter.UI/Components/Tabs/EntMdiTab.razor
@@ -12,6 +12,7 @@
         KeepPanelAlive="@KeepPanelAlive"
         OnTabActived="OnTabActivatedCallback"
         OnTabClosed="OnTabClosedCallback"
+        OnAllTabClosed="OnAllTabClosedCallback"
         OnTabAdded="OnTabAddedCallback">
     <ChildContent>
         @foreach (var item in Items)
