--- a/Enter.UI/Components/Tabs/EntTab.razor
+++ b/Enter.UI/Components/Tabs/EntTab.razor
@@ -22,6 +22,14 @@
                         }
                     </li>
                 }
+                @if (Closeable)
+                {
+                    <li class="@ItemCss">
+                        <div @onclick="OnTabAllClose" class="ent-tab-action ">
+                            <EntIcon Data="fa-light fa-trash" Type="EntIconType.IconTag"/>
+                        </div>
+                    </li>
+                }
             </ul>
         }
         else
