--- a/Enter.UI/wwwroot/scss/components/_components.scss
+++ b/Enter.UI/wwwroot/scss/components/_components.scss
@@ -2,5 +2,6 @@
 @import "ent_tab.component";
 @import "ent_app_bar.component";
 @import "ent_card.component";
+@import "ent_form.component";
 @import "ent_modal.component";
 @import "ent_nav_menu.component";
