--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -1,19 +1,32 @@
-﻿<EntCard class="m-4">
-    <Header>صفحه فرم</Header>
-    <Content>
-        <EditForm class="ent-edit-form" Model="Input" OnSubmit="() => { }">
+﻿@using System.ComponentModel.DataAnnotations
+<EntCard class="m-4">
+    <CardHeader>صفحه فرم</CardHeader>
+    <CardContent>
+        <EditForm class="ent-edit-form" Model="Input" OnValidSubmit="@OnSubmit">
+            <DataAnnotationsValidator/>
             <div class="row">
-                <div class="tablet:col-1/3 mb-4">
-                    <label class="d-block fs-medium-sm mb-2">نام</label>
+                <div class="tablet:col-1/3 mb-4 ent-form-group">
+                    <label>نام</label>
                     <InputText class="ent-input" @bind-Value="Input.FirstName"/>
+                    <ValidationMessage For="() => Input!.FirstName"/>
                 </div>
-                <div class="tablet:col-1/3 mb-4">
-                    <label class="d-block fs-medium-sm mb-2">نام خانوادگی</label>
+                <div class="tablet:col-1/3 mb-4 ent-form-group">
+                    <label >نام خانوادگی</label>
                     <InputText class="ent-input" @bind-Value="Input.LastName"/>
+                    <ValidationMessage For="() => Input!.LastName"/>
                 </div>
-                <div class="tablet:col-1/3 mb-4">
-                    <label class="d-block fs-medium-sm mb-2">سن</label>
-                    <InputNumber class="ent-input" @bind-Value="Input.Age"/>
+                <div class="tablet:col-1/3 mb-4 ent-form-group">
+                    <label >شهر</label>
+                    <InputSelect class="ent-input" @bind-Value="Input.LastName">
+                        <option value="urmia">ارومیه</option>
+                        <option value="tabriz">تبریز</option>
+                    </InputSelect>
+                    <ValidationMessage For="() => Input!.LastName"/>
+                </div>
+                <div class="tablet:col-1/3 mb-4 ent-form-group">
+                    <label >سن</label>
+                    <InputNumber TValue="Int32" class="ent-input" @bind-Value="Input.Age"/>
+                    <ValidationMessage For="() => Input!.Age"/>
                 </div>
             </div>
             <div class="row">
@@ -22,16 +35,31 @@
                 </div>
             </div>
         </EditForm>
-    </Content>
+    </CardContent>
 </EntCard>
+
 @code {
 
     public class InputModel
     {
+        [Required(ErrorMessage = "نام اجباری میباشد")]
         public string FirstName { get; set; }
+
+        [Required(ErrorMessage = "نام خانوادگی اجباری میباشد")]
         public string LastName { get; set; }
+
+        [Required(ErrorMessage = "شهر اجباری میباشد")]
+        public string City { get; set; }
+
+        [Required(ErrorMessage = "سن اجباری میباشد")]
         public int Age { get; set; }
     }
 
     public InputModel Input { get; set; } = new InputModel();
+
+    private async Task OnSubmit()
+    {
+        Console.WriteLine(Input.FirstName);
+    }
+
 }
