--- a/Enter.UI/wwwroot/scss/components/_ent_tab.component.scss
+++ b/Enter.UI/wwwroot/scss/components/_ent_tab.component.scss
@@ -20,28 +20,34 @@
     display: flex;
 
     > .ent-tab-item {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+
       cursor: pointer;
-     
+      display: flex;
+
+      &:hover {
+        background-color: map-get($colors,"lighteen");
+      }
       .ent-tab-content {
         padding: 0.5rem 1rem;
         display: flex;
         gap: 0.5rem;
         text-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
       }
+
       &.active {
-       > .ent-tab-close {
+        > .ent-tab-close {
           display: flex;
           padding: 0.5rem;
           width: fit-content;
-          transition: all 0.25s ease-in;
+
           border-inline-start: $border;
         }
       }
+
       .ent-tab-close {
-        background-color: map-get($colors,"light-sm");
+
         border-inline-start: $border;
         border-color: transparent;
         overflow: hidden;
@@ -50,28 +56,41 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        transition: all 0.25s ease-in;
+
       }
-      
-      
+
+      .ent-tab-action {
+        display: flex;
+        padding: 0.5rem;
+        width: fit-content;
+
+        border-inline-start: $border;
+        border-color: transparent;
+        overflow: hidden;
+        align-items: center;
+        justify-content: center;
+
+      }
     }
 
     > .ent-tab-item-vertical {
-     
-      >.ent-tab-content {
+
+      > .ent-tab-content {
         flex-direction: column;
         padding-top: 1rem;
         padding-bottom: 1rem;
+
       }
-      
-     
+
+
     }
 
     > .ent-tab-item-horizontal {
-      >.ent-tab-content {
+      > .ent-tab-content {
         flex-direction: row;
+
       }
-     
+
     }
 
   }
@@ -79,10 +98,9 @@
 
   > .ent-tab-panel-container {
     flex-grow: 1;
-    background-color: #f2f2f2;
     overflow: hidden;
     transition: all 0.25s ease-in;
-    
+
     &.active {
       transition: all 0.25s ease-in;
     }
