--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -20,7 +20,7 @@
             <EntCard class="mt-4">
                 <CardHeader>کامپوننت - دکمه</CardHeader>
                 <CardContent>
-                    <div class="d-flex space-x items-center">
+                    <div class="d-flex flex-column space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
                         <EntButton type="button" Size="ButtonSize.Large">دکمه بزرگ</EntButton>
                         <EntButton type="button" Size="ButtonSize.Default">دکمه معمولی</EntButton>
                         <EntButton type="button" Size="ButtonSize.Small">دکمه کوچک</EntButton>
@@ -30,7 +30,7 @@
             <EntCard class="mt-4">
                 <CardHeader>کامپوننت - مدال</CardHeader>
                 <CardContent>
-                    <div class="d-flex space-x">
+                    <div class="d-flex flex-column space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.ExtraLarge)">باز کردن مدال ExtraLarge</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Large)">باز کردن مدال Large</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Medium)">باز کردن مدال Medium</EntButton>
