--- a/Enter.UI/Components/Buttons/EntButton.razor
+++ b/Enter.UI/Components/Buttons/EntButton.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntBaseComponent
-<button @attributes="@Attributes" class="@RootClass" style="@Style" @onclick="@Click">
+<button @attributes="@Attributes" class="@RootClass"  @onclick="@Click">
     @if (Icon != null)
     {
         <EntIcon Data="@Icon" Type="@IconType"/>
