--- a/Enter.UI/Components/Icon/EntIcon.razor
+++ b/Enter.UI/Components/Icon/EntIcon.razor
@@ -1,7 +1,7 @@
 ﻿@inherits EntBaseComponent
 @namespace Enter.UI.Components
 
-<div onclick="@Click" style="@Style" @attributes="Attributes" class="@RootCss">
+<div onclick="@Click"  @attributes="Attributes" class="@RootCss">
     @if (Type == EntIconType.IconTag)
     {
         <i class="@Data"></i>
