--- a/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenuGroup.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @inherits Enter.UI.Core.Bases.EntBaseComponent
-<div @attributes="Attributes" class="@RootCss" style="@Style">
+<div @attributes="Attributes" class="@RootCss" >
     <div class="ent-nav-menu-group-item" @onclick="@ToggleItem">
         @if (Icon != null)
         {
