--- a/Enter.UI/Components/Tabs/EntTab.razor
+++ b/Enter.UI/Components/Tabs/EntTab.razor
@@ -1,7 +1,7 @@
 ﻿@inherits EntTabBase
 @namespace Enter.UI.Components
 <CascadingValue Value="@this">
-    <div @attributes="@Attributes" class="@RootCss" style="@Style">
+    <div @attributes="@Attributes" class="@RootCss" >
         @if (TabPanels.Count > 0)
         {
             <ul class="ent-tab-item-container">
