--- a/Enter.UI/Components/Tabs/EntTabPanel.razor
+++ b/Enter.UI/Components/Tabs/EntTabPanel.razor
@@ -1,7 +1,7 @@
 ﻿@inherits EntBaseComponent
 @namespace Enter.UI.Components
 
-<div @attributes="@Attributes" class="@RootCss" style="@Style"  >
+<div @attributes="@Attributes" class="@RootCss"   >
 @if (Parent.KeepPanelAlive)
 {
     
