--- a/Enter.UI/Components/Forms/EntFormGroup.razor
+++ b/Enter.UI/Components/Forms/EntFormGroup.razor
@@ -1,7 +1,7 @@
 ﻿@inherits EntBaseComponent
 @namespace Enter.UI.Components
 @typeparam TValue
-<div @attributes="@Attributes" class="@RootClass" style="@Style">
+<div @attributes="@Attributes" class="@RootClass" >
     <label >@Label</label>
     @ChildContent
     <ValidationMessage  For="@For" />
