--- a/Enter.UI/Components/Layouts/EntLayout.razor
+++ b/Enter.UI/Components/Layouts/EntLayout.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @inherits EntBaseComponent
-<div @attributes="Attributes" class="@RootCss" style="@Style">
+<div @attributes="Attributes" class="@RootCss" >
     @if (AppBar != null)
     {
         <div class="@AppBarCss">
@@ -10,7 +10,7 @@
     <div class="ent-layout-container">
         @if ( Sidebar != null)
         {
-            <div class="@SidebarCss">
+            <div class="@SidebarCss" >
                 @Sidebar
             </div>
         }
