--- a/Enter.UI/Components/NavMenu/EntNavMenuTextItem.razor
+++ b/Enter.UI/Components/NavMenu/EntNavMenuTextItem.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Enter.UI.Components
 @inherits Enter.UI.Core.Bases.EntBaseComponent
-<div @attributes="Attributes" class="@RootCss" style="@Style" @onclick="()=>Click.InvokeAsync()">
+<div @attributes="Attributes" class="@RootCss"  @onclick="()=>Click.InvokeAsync()">
     @if (IconData != null)
     {
         <EntIcon class="@IconCss" Type="@IconType" Data="@IconData" />
