--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -12,31 +12,31 @@
         <div class="p-4">
             <EntCard class="mb-4">
                 <CardContent>
-                    <div class="d-flex flex-column">
+                    <EntFlex Direction="EntFlex.FlexDirection.Column">
                         <b>این صفحه پیشفرض EntMdiTab میباشد</b>
-                    </div>
+                    </EntFlex>
                 </CardContent>
             </EntCard>
             <EntCard class="mt-4">
                 <CardHeader>کامپوننت - دکمه</CardHeader>
                 <CardContent>
-                    <div class="d-flex flex-column space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
+                    <EntFlex  class="space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
                         <EntButton type="button" Size="ButtonSize.Large">دکمه بزرگ</EntButton>
                         <EntButton type="button" Size="ButtonSize.Default">دکمه معمولی</EntButton>
                         <EntButton type="button" Size="ButtonSize.Small">دکمه کوچک</EntButton>
-                    </div>
+                    </EntFlex>
                 </CardContent>
             </EntCard>
             <EntCard class="mt-4">
                 <CardHeader>کامپوننت - مدال</CardHeader>
                 <CardContent>
-                    <div class="d-flex flex-column space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
+                    <EntFlex Direction="EntFlex.FlexDirection.Column" class="space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.ExtraLarge)">باز کردن مدال ExtraLarge</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Large)">باز کردن مدال Large</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Medium)">باز کردن مدال Medium</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Small)">باز کردن مدال Small</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Fullscreen)">باز کردن مدال FullScreen</EntButton>
-                    </div>
+                    </EntFlex>
                 </CardContent>
             </EntCard>
         </div>
