--- a/Enter.UI/_Imports.razor
+++ b/Enter.UI/_Imports.razor
@@ -3,4 +3,5 @@
 @using Enter.UI.Core
 @using Enter.UI.Core.Bases
 @using Microsoft.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Rendering
