--- a/Enter.Dashboard/Components/FormLayout.razor
+++ b/Enter.Dashboard/Components/FormLayout.razor
@@ -1,7 +1,7 @@
 ﻿@using System.ComponentModel.DataAnnotations
 <EntCard class="m-4">
     <CardHeader>صفحه فرم</CardHeader>
-    <CardContent>
+    <CardBody>
         <EditForm class="ent-edit-form" Model="Input" OnValidSubmit="@OnSubmit">
             <DataAnnotationsValidator/>
             <div class="row">
@@ -12,11 +12,12 @@
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label >نام خانوادگی</label>
-                    <InputText class="ent-input" @bind-Value="Input.LastName"/>
+                    <EntAutoCompleteInput class="ent-input" @bind-Value="Input.LastName"/>
                     <ValidationMessage For="() => Input!.LastName"/>
                 </div>
                 <div class="tablet:col-1/3 mb-4 ent-form-group">
                     <label >شهر</label>
+              
                     <InputSelect class="ent-input" @bind-Value="Input.LastName">
                         <option value="urmia">ارومیه</option>
                         <option value="tabriz">تبریز</option>
@@ -35,7 +36,7 @@
                 </div>
             </div>
         </EditForm>
-    </CardContent>
+    </CardBody>
 </EntCard>
 
 @code {
