--- a/Enter.Dashboard/Pages/Index.razor
+++ b/Enter.Dashboard/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 @using Enter.UI.Services.Contracts;
 @using Enter.UI.Components
+
 <PageTitle>Index</PageTitle>
+
 <div class="d-flex flex-column">
     <EntMdiTab ItemDirection="EntTabItemDirection.Horizontal"
                KeepPanelAlive="true"
@@ -11,38 +13,37 @@
                Direction="EntTabDirection.Vertical" class="border-0 flex-grow-1">
         <div class="p-4">
             <EntCard class="mb-4">
-                <CardContent>
-                    <EntFlex Direction="EntFlex.FlexDirection.Column">
+                <CardBody>
+                    <div class="d-flex flex-column">
                         <b>این صفحه پیشفرض EntMdiTab میباشد</b>
-                    </EntFlex>
-                </CardContent>
+                    </div>
+                </CardBody>
             </EntCard>
             <EntCard class="mt-4">
                 <CardHeader>کامپوننت - دکمه</CardHeader>
-                <CardContent>
-                    <EntFlex  class="space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
+                <CardBody>
+                    <div class="d-flex flex-column space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0">
                         <EntButton type="button" Size="ButtonSize.Large">دکمه بزرگ</EntButton>
                         <EntButton type="button" Size="ButtonSize.Default">دکمه معمولی</EntButton>
                         <EntButton type="button" Size="ButtonSize.Small">دکمه کوچک</EntButton>
-                    </EntFlex>
-                </CardContent>
+                    </div>
+                </CardBody>
             </EntCard>
             <EntCard class="mt-4">
                 <CardHeader>کامپوننت - مدال</CardHeader>
-                <CardContent>
-                    <EntFlex Direction="EntFlex.FlexDirection.Column" class="space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0  ">
+                <CardBody>
+                    <div class="d-flex flex-column space-y-4 laptop:items-center  laptop:flex-row laptop:space-x-4 laptop:space-y-0">
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.ExtraLarge)">باز کردن مدال ExtraLarge</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Large)">باز کردن مدال Large</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Medium)">باز کردن مدال Medium</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Small)">باز کردن مدال Small</EntButton>
                         <EntButton type="button" Click="() => OpenModal(EntModalSize.Fullscreen)">باز کردن مدال FullScreen</EntButton>
-                    </EntFlex>
-                </CardContent>
+                    </div>
+                </CardBody>
             </EntCard>
         </div>
     </EntMdiTab>
 </div>
-
 
 @code {
 
